--- a/main.css
+++ b/main.css
@@ -7,8 +7,15 @@ body {
 }
 
 /* HEADER */
+header {
+  padding: 20px;
+}
 h1 {
   text-align: center;
+}
+header .home {
+  text-decoration: none;
+  color: inherit;
 }
 
 /* Calendar */
@@ -27,12 +34,16 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 40px;
+  padding: 20px;
   font-size: 20px;
 }
 .calendar .year-month .year {
+  width: 70px;
+  text-align: center;
 }
 .calendar .year-month .month {
+  width: 45px;
+  text-align: center;
 }
 .calendar .year-month .prev-month,
 .calendar .year-month .next-month  {
@@ -75,4 +86,14 @@ h1 {
 }
 .calendar .birth:hover .tooltip {
   visibility: visible;
+}
+
+/* Footer */
+footer {
+  font-size: 12px;
+  color: #999;
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  text-align: end;
 }
