--- a/main.scss
+++ b/main.scss
@@ -22,6 +22,7 @@ header {
 
 /* Search */
 .search {
+  position: relative;
   .search-input {
     height: 34px;
     position: relative;
@@ -43,23 +44,27 @@ header {
         border-color: #FF9999;
       }
     }
-  }
-  .search-list {
-    position: relative;
-    display: flex;
-    font-size: 15px;
-    justify-content: center;
-    .list {
-      width: 190px;
-      border: 1px solid #ccc;
-      box-sizing: border-box;
-      display: none;
-      color: #777;
-      
-      .res {
-        cursor: pointer;
-        padding: 4px 10px;
-        font-size: 12px;
+    .search-list {
+      background-color: #fff;
+      opacity: .8;
+      position: absolute;
+      top: 34px;
+      display: flex;
+      font-size: 15px;
+      justify-content: center;
+      z-index: 1;
+      .list {
+        width: 190px;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
+        display: none;
+        color: #777;
+        
+        .res {
+          cursor: pointer;
+          padding: 4px 10px;
+          font-size: 12px;
+        }
       }
     }
   }
